--- a/src/components/orders/new-order.component.scss
+++ b/src/components/orders/new-order.component.scss
@@ -40,19 +40,74 @@
 
 /* Drag and Drop */
 
-.draggable {
+// .draggable {
+//     border-bottom: solid 1px #ccc;
+//     color: rgba(0, 0, 0, 0.87);
+//     display: inline-flex;
+//     align-items: center;
+//     justify-content: space-between;
+//     box-sizing: border-box;
+//     cursor: move;
+//     background: white;
+//     font-size: inherit;
+//   }
+      
+// .cdk-drag-preview {
+//     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+//                 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+//                 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+//     font-size: 14px;
+//     padding: 5px;
+//   }
+  
+//   .cdk-drag-placeholder {
+//     opacity: 0;
+//   }
+  
+//   .cdk-drag-animating {
+//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+//   }
+  
+//   .draggable:last-child {
+//     border: none;
+//   }
+  
+//   .draggable:not(.cdk-drag-placeholder) {
+//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+//   }
+
+.example-container {
+    width: 400px;
+    max-width: 100%;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  .example-list {
+    border: solid 1px #ccc;
+    min-height: 60px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+    display: block;
+  }
+  
+  .example-box {
+    padding: 20px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
     background: white;
-    font-size: inherit;
+    font-size: 14px;
   }
-      
-.cdk-drag-preview {
+  
+  .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
@@ -68,10 +123,10 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .draggable:last-child {
+  .example-box:last-child {
     border: none;
   }
   
-  .draggable:not(.cdk-drag-placeholder) {
+  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
