--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -129,7 +129,7 @@
         </div>
     </div>
 
-    <div class="tabs-container padded-aside">
+    <div class="tabs-container padded-aside" *ngIf="orderProducts.order.orderType == 1">
         <div class="flex-container row">
             <div class="col-xs" *ngFor="let item of orderDetailArray">
                 <div class="tab" [ngClass]="{'tabSelected': selectedProductKey === item.key}" (click)="toggleProductKey(item.key)">
@@ -143,48 +143,8 @@
         </div>
     </div>
 
-    <!-- Products list matching part no. -->
-    <div class="flex-container row padded-aside">
-        <div class="wrapper" *ngIf="orderProducts.order.orderType == 2">
-            <div class="Rtable Rtable--5cols Rtable--collapse">
-                <div class="Rtable-row Rtable-row--head">
-                    <div class="Rtable-cell small-cell column-heading">Serial no</div>
-                    <div class="Rtable-cell topic-cell column-heading">Name</div>
-                    <div class="Rtable-cell date-cell column-heading">Avg Price</div>
-                    <div class="Rtable-cell date-cell column-heading">Total Items</div>
-                </div>
-
-                <ng-container>
-                    <div cdkDropList #todoList="cdkDropList" 
-                        [cdkDropListData]="availableProductsList" 
-                        [cdkDropListConnectedTo]="[doneList]"
-                        class="drag-list"
-                        (cdkDropListDropped)="drop($event)">
-                            <div class="Rtable-row draggable" *ngFor="let product of availableProductsList" cdkDrag>
-                                <div class="Rtable-cell small-cell">
-                                    <div class="Rtable-cell--heading">Serial No.</div>
-                                    <div class="Rtable-cell--content date-content">{{product.serialNumber}}</div>
-                                </div>
-                                <div class="Rtable-cell topic-cell">
-                                    <div class="Rtable-cell--heading">Name</div>
-                                    <div class="Rtable-cell--content title-content">{{product.name}}</div>
-                                </div>
-                                <div class="Rtable-cell date-cell">
-                                    <div class="Rtable-cell--heading">Avg Price</div>
-                                    <div class="Rtable-cell--content title-content">{{product.avgPrice}}</div>
-                                </div>
-                                <div class="Rtable-cell date-cell">
-                                    <div class="Rtable-cell--heading">Total Items</div>
-                                    <div class="Rtable-cell--content title-content">{{product.totalItems}}</div>
-                                </div>
-                            </div>
-                    </div>
-                </ng-container>
-            </div>
-        </div>
-
-        <!-- Product Items Selected -->
-        <div class="wrapper">
+        <!-- Product Items on Order In -->
+        <div class="wrapper padded-aside" *ngIf="orderProducts.order.orderType == 1">
             <div class="Rtable Rtable--5cols Rtable--collapse">
                 <div class="Rtable-row Rtable-row--head">
                     <div class="Rtable-cell small-cell column-heading">Serial no</div>
@@ -227,7 +187,80 @@
                 </ng-container>
             </div>
         </div>
-    </div>
 
 
-</div>
+        <div class="flex-container row padded-aside" *ngIf="orderProducts.order.orderType == 2">
+            <div class="example-container">
+                <h2>All Products</h2>
+                <div
+                    cdkDropList
+                    #todoList="cdkDropList"
+                    [cdkDropListData]="availableProductsList"
+                    [cdkDropListConnectedTo]="[doneList]"
+                    class="example-list"
+                    (cdkDropListDropped)="drop($event)">
+                    <div class="example-box" *ngFor="let item of availableProductsList" cdkDrag>
+                        <div class="wrapper">
+                            <div class="Rtable Rtable--5cols Rtable--collapse">
+                                <div class="Rtable-row Rtable-row--head">
+                                    <div class="Rtable-cell small-cell column-heading">Serial no</div>
+                                    <div class="Rtable-cell topic-cell column-heading">Name</div>
+                                </div>
+                
+                                <ng-container>
+                                    <ng-container>
+                                        <div class="Rtable-row">
+                                            <div class="Rtable-cell small-cell">
+                                                <div class="Rtable-cell--heading">Serial No.</div>
+                                                <div class="Rtable-cell--content date-content">{{item.serialNumber}}</div>
+                                            </div>
+                                            <div class="Rtable-cell topic-cell">
+                                                <div class="Rtable-cell--heading">Name</div>
+                                                <div class="Rtable-cell--content title-content">{{item.product.name}}</div>
+                                            </div>
+                                        </div>
+                                    </ng-container>
+                                </ng-container>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+              
+            <div class="example-container">
+                <h2>Selected Products</h2>
+                <div
+                    cdkDropList
+                    #doneList="cdkDropList"
+                    [cdkDropListData]="draggedProductList"
+                    [cdkDropListConnectedTo]="[todoList]"
+                    class="example-list"
+                    (cdkDropListDropped)="drop($event)">
+                <div class="example-box" *ngFor="let item of draggedProductList" cdkDrag>
+                    <div class="wrapper">
+                        <div class="Rtable Rtable--5cols Rtable--collapse">
+                            <div class="Rtable-row Rtable-row--head">
+                                <div class="Rtable-cell small-cell column-heading">Serial no</div>
+                                <div class="Rtable-cell topic-cell column-heading">Name</div>
+                            </div>
+            
+                            <ng-container>
+                                <ng-container>
+                                    <div class="Rtable-row">
+                                        <div class="Rtable-cell small-cell">
+                                            <div class="Rtable-cell--heading">Serial No.</div>
+                                            <div class="Rtable-cell--content date-content">{{item.serialNumber}}</div>
+                                        </div>
+                                        <div class="Rtable-cell topic-cell">
+                                            <div class="Rtable-cell--heading">Name</div>
+                                            <div class="Rtable-cell--content title-content">{{item.product.name}}</div>
+                                        </div>
+                                    </div>
+                                </ng-container>
+                            </ng-container>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
